@@ -1,3 +1,7 @@
+2005-07-26  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-remote.c: fixed signedness warnings.
+
 2005-07-25  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/imagemap/imap_csim.y: make buffer large enough to hold
